fix(1145): annotation not overflow

--- a/src/app/packages/imagery/imagery-component/imagery.component.less
+++ b/src/app/packages/imagery/imagery-component/imagery.component.less
@@ -6,4 +6,5 @@
 	display: flex;
 	justify-content: center;
 	box-sizing: border-box;
+	z-index: 1;
 }
