--- a/src/app/packages/map-facade/components/imagery-container/imagery-container.component.less
+++ b/src/app/packages/map-facade/components/imagery-container/imagery-container.component.less
@@ -2,6 +2,12 @@
 @import "core/less/z-index-globals";
 
 :host {
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 	div.imagery {
 		position: relative;
 		width: 100%;
